<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Data"
    android:background="@drawable/img_1"
    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_Data"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/register_Data"
            android:textColor="@color/Yellow"
            android:textSize="30sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="1">

            <ImageView
                android:id="@+id/uploadedImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_2" />
        </GridLayout>

        <TextView
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/user"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/Password"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/Password"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/courses1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/courses"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/courses"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/gender1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/ur_gender"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/ur_gender"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/birth1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/Birthdate"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/Birthdate"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/add1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/ur_address"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/ur_address"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload"
            android:textColor="@color/gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/toupload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="30sp"

            />

        <Switch
            android:id="@+id/s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term"
            android:textColor="@color/white"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:gravity="center"/>

        <TextView
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#F80202"
            android:layout_marginBottom="60dp"
            android:text="@string/skip"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:paddingEnd="80dp"
            android:paddingVertical="5dp"
            android:paddingStart="150dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</ScrollView>